# bloatSQL

./: package.json
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
docs/: architecture.md
scripts/: bump-version.sh
src/: App.tsx  Providers.tsx  connections.application.ts  connections.domain.ts  connections.infrastructure.tauri.ts  connections.presentation.ts  connections.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  main.rs
src-tauri/src/db/: connection.rs  integration_tests.rs  mod.rs
src-tauri/src/db/mariadb/: export.rs  mod.rs  queries.rs  types.rs
src-tauri/src/db/postgresql/: catalog.rs  export.rs  mod.rs  model.rs  queries.rs  types.rs
src/components/CellEditor/: AddRowForm.tsx  CellEditForm.tsx  SmartColumnInput.tsx  addRowFlow.ts  addRowForm.logic.ts  cellEditForm.logic.ts
src/components/ConnectionManager/: ConnectionForm.tsx  ConnectionModal.tsx
src/components/DiagramWorkspace/: DiagramWorkspace.tsx
src/components/QueryWorkspace/: MonacoSqlEditor.tsx  QueryEditorCard.tsx  ResultsCard.module.css  ResultsCard.tsx  deleteRowsFlow.ts  resultsCard.logic.ts
src/components/StructureEditor/: StructureEditControls.tsx  (+1 more)
src/hooks/: useAppController.ts  useSchemaMutationSync.logic.ts  useSchemaMutationSync.ts
src/stores/: connectionStore.ts  databaseBrowserStore.ts  editCellStore.ts  queryEditorStore.ts  queryExecutionStore.ts  queryHistoryStore.ts  queryStore.ts  queryStore.utils.ts  schemaStore.store.ts  schemaStore.ts  tableMetadataStore.ts
src/tauri/: commands.ts
src/types/: database.ts  tableStructure.ts
tests/frontend/: addRowFlow.test.ts  addRowForm.logic.test.ts  cellEditForm.logic.test.ts  connections.application.test.ts  deleteRowsFlow.test.ts  resultsCard.logic.test.ts  schemaMutationFeedback.test.ts  schemaStore.test.ts  useSchemaMutationSync.logic.test.ts
(+20 files in other folders)
